--- a/evlenselPackage/inst/extdata/BYS_donemproje_bolumII_Evlensel.Rmd
+++ b/evlenselPackage/inst/extdata/BYS_donemproje_bolumII_Evlensel.Rmd
@@ -387,3 +387,7 @@ Veri setimizi SuitCRM platformuna entegre ettik. Bu süreçte izlediğimiz adım
 -Bu süreçte herhangi bir kodlama gereksinimi olmadan, SuitCRM'in sağladığı kullanıcı arayüzü araçlarını kullanarak veri setimizi platforma entegre ettik. Böylece, veri setimiz SuitCRM üzerinden erişilebilir ve analiz edilebilir hale geldi.
 
 -Veri ithalinin başarılı olduğunu ve verilerin doğru şekilde işlendiğini doğrulamak için SuitCRM'deki modül üzerinden verileri kontrol ettik. Tüm verilerin düzgün bir şekilde yer aldığını ve herhangi bir veri kaybı olmadığını teyit ettik.
+
+## Q6 : Çalışan platformun gösterildiği sesli anlatımlı video
+
+[Video](https://youtu.be/3PSjaOkwgCQ)
